syntax = "proto3";
package com.antigravity;

import "server/race_participant.proto";
import "client/driver_model.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "DriverHeatDataProto";

message DriverHeatData {
  RaceParticipant driver = 1;
  string object_id = 2;
  string driver_id = 3;
  DriverModel actual_driver = 4;
  double gap_leader = 5;
  double gap_position = 6;
}

